lib/tests/fixtures/compiler/parser/return_in_resource_override.baseline
Error: return_in_resource_override.pp:3:26: return statement cannot be used inside a resource override expression.
  bar => if true { return }
                   ^~~~~~
