lib/tests/fixtures/compiler/parser/return_in_resource_override.pp
function foo {
    File[foo] {
        bar => if true { return }
    }
}
